--- a/dataframe_display.ipynb
+++ b/dataframe_display.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "07224f45-6ff9-404d-9a72-fb0c7c4dfca5",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "from IPython.display import display, HTML"
+    "from IPython.display import display, HTML\n",
+    "import ipywidgets as widgets"
    ]
   },
   {
@@ -7212,8 +7213,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "780f10e5-c2cc-4f16-9126-bffdd17c44fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd341951363a4a08be7aa7ccf5c73c24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "w = widgets.IntSlider()\n",
+    "display(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3adc6ed9-9519-4ff8-9f9c-3e60bfa336a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71a8c738d4904f22a4b37bab59116ae6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=42, description='Loading:', style=ProgressStyle(bar_color='maroon'))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widgets.IntProgress(\n",
+    "    value=w.value,\n",
+    "    min=0,\n",
+    "    max=100,\n",
+    "    description='Loading:',\n",
+    "    bar_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    style={'bar_color': 'maroon'},\n",
+    "    orientation='horizontal'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a048e0f6-16a0-4a81-aeb6-147c94d1514f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "161e6ff6fddc4b23a8f0dc82e401477c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Number:', index=1, options=('1', '2', '3'), value='2')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widgets.Dropdown(\n",
+    "    options=['1', '2', '3'],\n",
+    "    value='2',\n",
+    "    description='Number:',\n",
+    "    disabled=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b749e4a4-49fb-454b-bbed-68bff2dc23d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot(amplitude, color):\n",
+    "    fig, ax = plt.subplots(figsize=(4, 3),\n",
+    "                           subplot_kw={'axisbg':'#EEEEEE',\n",
+    "                                       'axisbelow':True})\n",
+    "    ax.grid(color='w', linewidth=2, linestyle='solid')\n",
+    "    x = np.linspace(0, 10, 1000)\n",
+    "    ax.plot(x, amplitude * np.sin(x), color=color,\n",
+    "            lw=5, alpha=0.4)\n",
+    "    ax.set_xlim(0, 10)\n",
+    "    ax.set_ylim(-1.1, 1.1)\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f98207f-abb5-4abc-aa8f-66217ba7f6af",
    "metadata": {},
    "outputs": [],
    "source": []
